fix for no more flickering!

--- a/assets/less/base/ui/posts.less
+++ b/assets/less/base/ui/posts.less
@@ -92,7 +92,7 @@
 	}
 	
 	.postImage {
-		max-height: 100%;
+		height: 100%;
 		width: 100%;
 	}
 
